--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,7 +5,7 @@
 
   <div class="field">
     <%= f.label :nickname %><br />
-    <%= f.text_field :nickname, autofocus: true, autocomplete: "email" %>
+    <%= f.text_field :nickname %>
   </div>
 
   <div class="field">
