--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,7 +2,9 @@
 <div class="book-lists">
   <% @books.each do |book| %>
     <div class="book_list">
-      <p>タイトル：<%= book.title %></p>
+      <%= link_to book_path(book) do %>
+        <p>タイトル：<%= book.title %></p>
+      <% end %>
       <p>編著者：<%= book.author %></p>
     </div>
   <% end %>
