--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,2 +1,15 @@
 <h1>トップページ</h1>
- <p><%= link_to '本を登録する', new_book_path, class: "login" %></p>
+<p><%= link_to '本を登録する', new_book_path, class: "login" %></p>
+<div class="post-lists">
+  <% @posts.each do |post| %>
+    <div class="post-list">
+      <div><%= post.book.title %></div>
+      <div><%= post.book.author %></div>
+      <div><%= post.memo %></div>
+      <% if post.page.present? %>
+        <div><%= post.page %></div>
+      <% end %>
+      <div><%= post.book.user.nickname %></div>
+    </div>
+  <% end %>
+</div>
