--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -7,7 +7,7 @@
       <% end %>
       <p>編著者：<%= book.author %></p>
       <div class="book-post_lists">
-        <% book.posts.order("created_at DESC").each do |post| %>
+        <% book.posts.order("created_at DESC").first(3).each do |post| %>
           <div><%= post.memo %></div>
           <% if post.page.present? %>
             <div><%= post.page %></div>
