--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,1 +1,11 @@
 <h1>読書メモ詳細画面</h1>
+<div>
+  <div><%= @post.book.title %></div>
+  <div><%= @post.book.author %></div>
+  <div><%= @post.memo %></div>
+  <% if @post.page.present? %>
+    <div><%= @post.page %></div>
+  <% end %>
+  <div><%= @post.book.user.nickname %></div>
+  <div><%= @post.created_at %></div>
+</div>
