日本時刻への対応

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -7,5 +7,5 @@
     <div><%= @post.page %></div>
   <% end %>
   <div><%= @post.book.user.nickname %></div>
-  <div><%= @post.created_at %></div>
+  <div><%= l @post.created_at %></div>
 </div>
