--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -10,11 +10,11 @@
         <% book.posts.order("created_at DESC").first(3).each do |post| %>
           <% if post.hidden_check %>
             <div class="book-post-list">
-              <div>読書メモを表示する</div>
+              <div><%= link_to "読書メモを表示する", post_path(post) %></div>
             </div>
           <% else %>
             <div class="book-post-list">
-              <div><%= post.memo %></div>
+              <div><%= link_to post.memo, post_path(post) %></div>
                 <% if post.page.present? %>
                   <div><%= post.page %></div>
                 <% end %>
