--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,7 +6,7 @@
       <div class="post-list">
         <div><%= post.book.title %></div>
         <div><%= post.book.author %></div>
-        <%= link_to "読書メモを表示する", post_path(post) %>
+        <div><%= link_to "読書メモを表示する", post_path(post) %></div>
         <div><%= post.book.user.nickname %></div>
       </div>
     <% else %>
