--- a/app/assets/stylesheets/post/index.css
+++ b/app/assets/stylesheets/post/index.css
@@ -1,17 +1,13 @@
-.index-main-content {
-  height: calc(100vh - 80px);
+.main-content {
   width: 100vw;
   display: flex;
   justify-content: center;
-  background-color: #90CE9C;
-  overflow: hidden;
 }
 
 .post-lists {
   width: 600px;
   height: 100%;
-  padding-top: 15px;
-  padding-bottom: 15px;
+  padding-top: 45px;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -21,14 +17,18 @@
 .post-list {
   width: 600px;
   background-color: ivory;
-  margin-bottom: 15px;
+  margin-bottom: 45px;
+  box-sizing: border-box;
+  border: #004F2A 2px solid;
 }
 
 .post-hidden-list {
   height: 150px;
   width: 600px;
   background-color: ivory;
-  margin-bottom: 15px;
+  margin-bottom: 45px;
+  box-sizing: border-box;
+  border: #004F2A 2px solid;
 }
 
 .post-upper {
