--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,4 @@
-<div class="index-main-content">
+<div class="main-content">
   <div class="post-lists">
     <% @posts.each do |post| %>
       <% if post.hidden_check %>
