--- a/app/assets/stylesheets/devise/devise.css
+++ b/app/assets/stylesheets/devise/devise.css
@@ -44,3 +44,16 @@
   color: ivory;
   border: none;
 }
+
+.remember-check {
+  margin-top: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.remember-check-box {
+  margin-top: 10px;
+  height: 20px;
+  width: 20px;
+}
