--- a/app/assets/stylesheets/post/show.css
+++ b/app/assets/stylesheets/post/show.css
@@ -7,7 +7,7 @@
 .post-detail {
   width: 850px;
   background-color: ivory;
-  margin: 30px;
+  margin-top: 30px;
   box-sizing: border-box;
   border: #004F2A 2px solid;
 }
