--- a/app/assets/stylesheets/shared/side_bar.css
+++ b/app/assets/stylesheets/shared/side_bar.css
@@ -1,6 +1,8 @@
 .side-bar {
-  height: calc(100vh - 80px);
+  height: 100vh;
   width: 200px;
+  position: sticky;
+  top: 0;
   background-color:#90CE9C;
   display: flex;
   justify-content: center;
