--- a/app/views/shared/_side_bar.html.erb
+++ b/app/views/shared/_side_bar.html.erb
@@ -2,7 +2,7 @@
   <ul class="side-lists">
     <li class="side-list-nickname"><%= user.nickname %></li>
     <li class="side-list"><%= link_to '読んだ本', books_path %></li>
-    <li class="side-list">プロフィール</li>
+    <li class="side-list"><%= link_to 'プロフィール', profiles_path %></li>
     <li class="side-list">いいね</li>
   </ul>
 </div>
