--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -4,7 +4,7 @@
     <% if @user.profile.present? %>
       <div>プロフィール</div>
     <% else %>
-      <div>プロフィールを登録する</div>
+      <div><%= link_to "プロフィールを登録する", new_profile_path %></div>
     <% end %>
   </div>
 </div>
