--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -1,6 +1,49 @@
 <div class="another-main-content">
   <%= render partial: "shared/side_bar", locals: { user: @user } %>
   <div class="right-content">
-    <div>プロフィールを登録する</div>
+    <div class="form">
+      <div class="form-text">プロフィールを登録する</div>
+      <%= form_with model: @profile, local: true do |f| %>
+        <div class="field">
+          <div class="text">
+            好きなジャンル
+          </div>
+          <%= f.text_field :favorite_genre, placeholder:"好きなジャンル", class: "form-field" %>
+        </div>
+        <div class="field">
+          <div class="text">
+            好きな本
+          </div>
+          <%= f.text_field :favorite_book1, placeholder:"好きな本", class: "form-field" %>
+        </div>
+        <div class="field">
+          <%= f.text_field :favorite_book2, placeholder:"好きな本", class: "form-field" %>
+        </div>
+        <div class="field">
+          <%= f.text_field :favorite_book3, placeholder:"好きな本", class: "form-field" %>
+        </div>
+        <div class="field">
+          <div class="text">
+            好きな著者
+          </div>
+          <%= f.text_field :favorite_author1, placeholder:"好きな著者", class: "form-field" %>
+        </div>
+        <div class="field">
+          <%= f.text_field :favorite_author2, placeholder:"好きな著者", class: "form-field" %>
+        </div>
+        <div class="field">
+          <%= f.text_field :favorite_author3, placeholder:"好きな著者", class: "form-field" %>
+        </div>
+        <div class="field">
+          <div class="text">
+            生年月日
+          </div>
+          <%= f.date_field :birth_date, class: "form-field" %>
+        </div>
+        <div class="form-under">
+          <%= f.submit "登録する" ,class:"contribute-btn" %>
+        </div>
+      <% end %>
+    </div>
   </div>
 </div>
