--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,8 +1,46 @@
 <div class="another-main-content">
   <%= render partial: "shared/side_bar", locals: { user: @user } %>
   <div class="right-content">
-    <% if @user.profile.present? %>
-      <div>プロフィール</div>
+    <% if @profile.present? %>
+      <div class="profile">
+        <div class="profile-nickname"><%= @user.nickname %>さんのプロフィール</div>
+        <div class="profile-element">
+          <div class="profile-left-text">好きなジャンル</div>
+          <% if @profile.favorite_genre.present? %>
+            <div class="profile-right-text"><%= @profile.favorite_genre %></div>
+          <% end %>
+        </div>
+        <div class="profile-element">
+          <div class="profile-left-text">好きな本</div>
+          <% if @profile.favorite_book1.present? %>
+            <div class="profile-right-text"><%= @profile.favorite_book1 %></div>
+          <% end %>
+          <% if @profile.favorite_book2.present? %>
+            <div class="profile-right-text"><%= @profile.favorite_book2 %></div>
+          <% end %>
+          <% if @profile.favorite_book3.present? %>
+            <div class="profile-right-text"><%= @profile.favorite_book3 %></div>
+          <% end %>
+        </div>
+        <div class="profile-element">
+          <div class="profile-left-text">好きな本</div>
+          <% if @profile.favorite_author1.present? %>
+            <div class="profile-right-text"><%= @profile.favorite_author1 %></div>
+          <% end %>
+          <% if @profile.favorite_author2.present? %>
+            <div class="profile-right-text"><%= @profile.favorite_author2 %></div>
+          <% end %>
+          <% if @profile.favorite_author3.present? %>
+            <div class="profile-right-text"><%= @profile.favorite_author3 %></div>
+          <% end %>
+        </div>
+        <div class="profile-element">
+          <div class="profile-left-text">生年月日</div>
+          <% if @profile.birth_date.present? %>
+            <div class="profile-right-text"><%= @profile.birth_date %></div>
+          <% end %>
+        </div>
+      </div>
     <% else %>
       <div><%= link_to "プロフィールを登録する", new_profile_path %></div>
     <% end %>
