profilesコントローラーのupdateアクションの定義

--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -41,7 +41,7 @@
           <%= f.date_select :birth_date, {start_year: 1930, end_year: 2023, use_month_numbers: true, prompt: "--"}, {class: "birth-date"} %>
         </div>
         <div class="form-under">
-          <%= f.submit "修正する" ,class:"contribute-btn" %>
+          <%= f.submit "編集する" ,class:"contribute-btn" %>
         </div>
       <% end %>
     </div>
