--- a/app/assets/stylesheets/profile/index.css
+++ b/app/assets/stylesheets/profile/index.css
@@ -29,3 +29,20 @@
   margin-top: 10px;
   text-align: right;
 }
+
+.profile-btn {
+  height: 30px;
+  width: 250px;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: #004F2A 2px solid;
+  margin-top: 20px;
+}
+
+.profile-btn a {
+  text-decoration: none;
+  font-size: 18px;
+  color: #004F2A;
+}
