--- a/app/assets/stylesheets/post/index.css
+++ b/app/assets/stylesheets/post/index.css
@@ -89,6 +89,38 @@
   align-items: center;
 }
 
+.post-under-like {
+  height: 35px;
+  margin-right: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.post-like-delete {
+  height: 30px;
+  width: 85px;
+  background-color: #F68B1E;
+  text-decoration: none;
+  color: ivory;
+  border-radius: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.post-like-create {
+  height: 30px;
+  width: 95px;
+  text-decoration: none;
+  color: #F68B1E;
+  border-radius: 15px;
+  border: #F68B1E 1px solid;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .post-under-page {
   margin-right: 40px;
   color: #004F2A;
