--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -20,9 +20,9 @@
           <div class="post-under">
             <div id="like-btn<%= post.id %>", class="post-under-like">
               <% if user_signed_in? && post.liked_by?(current_user)%>
-                <%=link_to "いいね済", post_likes_path(post.id),  method: :delete, class: "post-like" %>
+                <%=link_to "いいね済", post_likes_path(post.id),  method: :delete, class: "post-like-delete" %>
               <% else %>
-                <%=link_to "いいねする", post_likes_path(post.id), method: :post, class: "post-like" %>
+                <%=link_to "いいねする", post_likes_path(post.id), method: :post, class: "post-like-create" %>
               <% end %>
             </div>
             <% if post.page.present? %>
