--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -21,7 +21,7 @@
             <div id="like-btn<%= post.id %>", class="post-under-like">
               <% if user_signed_in? && post.liked_by?(current_user)%>
                 <%=link_to "いいね済", post_likes_path(post.id),  method: :delete, class: "post-like-delete" %>
-              <% else %>
+              <% elsif user_signed_in? && ! post.liked_by?(current_user) %>
                 <%=link_to "いいねする", post_likes_path(post.id), method: :post, class: "post-like-create" %>
               <% end %>
             </div>
