--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -19,11 +19,7 @@
           <div class="post-memo"><%= link_to post.memo, post_path(post) %></div>
           <div class="post-under">
             <div id="like-btn<%= post.id %>", class="post-under-like">
-              <% if user_signed_in? && post.liked_by?(current_user)%>
-                <%=link_to "いいね済", post_likes_path(post.id),  method: :delete, class: "post-like-delete" %>
-              <% elsif user_signed_in? && ! post.liked_by?(current_user) %>
-                <%=link_to "いいねする", post_likes_path(post.id), method: :post, class: "post-like-create" %>
-              <% end %>
+              <%= render partial: "likes/like", locals: { post: post } %>
             </div>
             <% if post.page.present? %>
               <div class="post-under-page"><%= post.page %>ページ</div>
