--- a/app/views/likes/_like.html.erb
+++ b/app/views/likes/_like.html.erb
@@ -1,5 +1,5 @@
 <% if user_signed_in? && post.liked_by?(current_user)%>
-  <%=link_to "いいね済", post_likes_path(post.id),  method: :delete, class: "post-like-delete" %>
+  <%=link_to "いいね済", post_likes_path(post.id),  method: :delete, class: "post-like-delete" , remote: true %>
 <% elsif user_signed_in? && ! post.liked_by?(current_user) %>
-  <%=link_to "いいねする", post_likes_path(post.id), method: :post, class: "post-like-create" %>
+  <%=link_to "いいねする", post_likes_path(post.id), method: :post, class: "post-like-create" , remote: true %>
 <% end %>
