いいねボタンの位置の調整

--- a/app/assets/stylesheets/post/index.css
+++ b/app/assets/stylesheets/post/index.css
@@ -87,6 +87,7 @@
   display: flex;
   justify-content: right;
   align-items: center;
+  position: relative;
 }
 
 .post-under-like {
@@ -95,6 +96,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  position: absolute;
+  left: 15px;
 }
 
 .post-like-delete {
