非表示投稿のいいねボタンの追加

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -8,7 +8,12 @@
             <div class="post-upper-author"><%= post.book.author %></div>
           </div>
           <div class="post-hidden"><%= link_to "読書メモを表示する", post_path(post) %></div>
-          <div class="post-hidden-nickname"><%= post.book.user.nickname %></div>
+          <div class="post-under">
+            <div id="like-btn<%= post.id %>", class="post-under-like">
+              <%= render partial: "likes/like", locals: { post: post } %>
+            </div>
+            <div class="post-under-nickname"><%= post.book.user.nickname %></div>
+          </div>
         </div>
       <% else %>
         <div class="post-list">
