--- a/app/views/shared/_side_bar.html.erb
+++ b/app/views/shared/_side_bar.html.erb
@@ -3,6 +3,6 @@
     <li class="side-list-nickname"><%= user.nickname %></li>
     <li class="side-list"><%= link_to '読んだ本', books_path %></li>
     <li class="side-list"><%= link_to 'プロフィール', profiles_path %></li>
-    <li class="side-list">いいね</li>
+    <li class="side-list"><%= link_to 'いいね', likes_path %></li>
   </ul>
 </div>
