--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -6,7 +6,7 @@
     <div>
       <ul class='lists-right'>
         <% if user_signed_in? %>
-          <li class="header-list"><%= link_to 'マイページ', books_path %></li>
+          <li class="header-list"><%= link_to 'マイページ', books_path(user_id: current_user) %></li>
           <li class="header-list"><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "logout" %></li>
           <li class="header-list"><%= link_to '読書メモ', new_post_path %></li>
         <% else %>
