--- a/app/assets/stylesheets/post/index.css
+++ b/app/assets/stylesheets/post/index.css
@@ -66,12 +66,6 @@
   color: #004F2A;
 }
 
-.post-hidden-nickname {
-  text-align: right;
-  padding-right: 20px;
-  color: #004F2A;
-}
-
 .post-memo {
   padding: 10px 15px;
 }
@@ -130,5 +124,9 @@
 
 .post-under-nickname {
   margin-right: 20px;
+}
+
+.post-under-nickname a {
+  text-decoration: none;
   color: #004F2A;
 }
