--- a/app/views/shared/_side_bar.html.erb
+++ b/app/views/shared/_side_bar.html.erb
@@ -1,8 +1,8 @@
 <div class="side-bar">
   <ul class="side-lists">
     <li class="side-list-nickname"><%= user.nickname %></li>
-    <li class="side-list"><%= link_to '読んだ本', books_path %></li>
-    <li class="side-list"><%= link_to 'プロフィール', profiles_path %></li>
-    <li class="side-list"><%= link_to 'いいね', likes_path %></li>
+    <li class="side-list"><%= link_to '読んだ本', books_path(user_id: @user) %></li>
+    <li class="side-list"><%= link_to 'プロフィール', profiles_path(user_id: @user) %></li>
+    <li class="side-list"><%= link_to 'いいね', likes_path(user_id: @user) %></li>
   </ul>
 </div>
