postsコントローラーのindexアクションのタイトルのリンクの生成

--- a/app/assets/stylesheets/post/index.css
+++ b/app/assets/stylesheets/post/index.css
@@ -40,10 +40,14 @@
 }
 
 .post-upper-title {
-  font-size: 20px;
-  color: ivory;
   margin-left: 20px;
   overflow: hidden;
+}
+
+.post-upper-title a {
+  text-decoration: none;
+  font-size: 20px;
+  color: ivory;
 }
 
 .post-upper-author {
