postsコントローラーのshowアクションのタイトルのリンクの生成

--- a/app/assets/stylesheets/post/show.css
+++ b/app/assets/stylesheets/post/show.css
@@ -21,10 +21,14 @@
 }
 
 .post-detail-title {
-  font-size: 35px;
-  color: ivory;
   padding-left: 20px;
   overflow: hidden;
+}
+
+.post-detail-title a {
+  text-decoration: none;
+  font-size: 35px;
+  color: ivory;
 }
 
 .post-detail-author {
